examples/secrets-sync-agent.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: secrets-sync-agent
  labels:
    app: secrets-sync-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secrets-sync-agent
  template:
    metadata:
      labels:
        app: secrets-sync-agent
    spec:
      restartPolicy: Always
      serviceAccountName: internal-app
      containers:
        - name: secrets-sync-agent
          image: 'quay.io/suman.tripuraneni/hvault-ocp-secrets-sync:v0.5'
          resources: {}
          volumeMounts:
            - name: connection-info
              mountPath: /etc/secrets_sync_agent/connection_info
            - name: secrets-info
              mountPath: /etc/secrets_sync_agent/secrets_info
          imagePullPolicy: Always
      serviceAccount: internal-app
      volumes:
        - name: connection-info
          configMap:
            name: secrets-config
        - name: secrets-info
          configMap:
            name: secrets-data
