examples/demo-init-container-secrets-sync-agent.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-init-container-secrets-sync-agent
  labels:
    app: demo-init-container-secrets-sync-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-init-container-secrets-sync-agent
  template:
    metadata:
      labels:
        app: demo-init-container-secrets-sync-agent
    spec:
      restartPolicy: Always
      serviceAccountName: internal-app
      containers:
        - name: demo-app
          image: 'quay.io/suman.tripuraneni/secrets-sync-agent-demo-app:latest'
          resources: {}
          volumeMounts:
            - name: secrets-mount
              mountPath: /vault-secrets
          imagePullPolicy: Always
      volumes:
        - name: connection-info
          configMap:
            name: connection-info
        - name: secrets-info
          configMap:
            name: file-secrets-data
        - name: secrets-mount
          emptyDir:
            medium: Memory
---
kind: Service
apiVersion: v1
metadata:
  name: demo-init-container-secrets-sync-agent
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: demo-init-container-secrets-sync-agent
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-init-container-secrets-sync-agent
spec:
  host: demo-init.apps.cluster2.openshifthappens.com
  to:
    kind: Service
    name: demo-init-container-secrets-sync-agent
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
