examples/demo-sidecar-container-secrets-sync-agent.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-sidecar-container-secrets-sync-agent
  labels:
    app: demo-sidecar-container-secrets-sync-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-sidecar-container-secrets-sync-agent
  template:
    metadata:
      labels:
        app: demo-sidecar-container-secrets-sync-agent
    spec:
      restartPolicy: Always
      serviceAccountName: internal-app
      containers:
        - name: secrets-sync-agent
          image: 'quay.io/suman.tripuraneni/hvault-ocp-secrets-sync:v0.5'
          resources: {}
          volumeMounts:
            - name: connection-info
              mountPath: /etc/secrets_sync_agent/connection_info/
            - name: secrets-info
              mountPath: /etc/secrets_sync_agent/secrets_info/
            - name: secrets-mount
              mountPath: /vault-secrets
          imagePullPolicy: Always
        - name: demo-app
          image: 'quay.io/suman.tripuraneni/secrets-sync-agent-demo-app:latest'
          resources: {}
          volumeMounts:
            - name: secrets-mount
              mountPath: /vault-secrets
          imagePullPolicy: Always
      volumes:
        - name: connection-info
          configMap:
            name: secrets-config
            defaultMode: 420
        - name: secrets-info
          configMap:
            name: secrets-file-data
            defaultMode: 420        
        - name: secrets-mount
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: demo-sidecar-container-secrets-sync-agent
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: demo-sidecar-container-secrets-sync-agent
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-sidecar-container-secrets-sync-agent
spec:
  host: demo-sidecar.apps.cluster2.openshifthappens.com
  to:
    kind: Service
    name: demo-sidecar-container-secrets-sync-agent
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
